kube/django-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-django-test
  labels:
    app: billing-test
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-test
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: billing-test
        part: django
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: billing-django-test-static
        - name: media
          persistentVolumeClaim:
            claimName: billing-django-test-media
      containers:
        - name: gunicorn
          image: as207960/billing-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--timeout=90", "as207960_billing.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
---
apiVersion: v1
kind: Service
metadata:
  name: billing-django-test
  labels:
    app: billing-test
    part: django
spec:
  selector:
    app: billing-test
    part: django
  ports:
    - port: 8000
      targetPort: 8000
      name: gunicorn
