kube/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-django
  labels:
    app: billing
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: billing
        part: django
    spec:
      containers:
        - name: gunicorn
          image: as207960/billing-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--timeout=90", "as207960_billing.wsgi:application"]
          ports:
            - containerPort: 8000
          envFrom: *envFrom
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: billing-django
spec:
  podSelector:
    matchLabels:
      app: billing
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: billing
          part: nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-rpc
  labels:
    app: billing
    part: rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
      part: rpc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: billing
        part: rpc
    spec:
      containers:
        - name: rpc
          image: as207960/billing-django:(version)
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "python3 manage.py run-rpc"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: billing-rpc
spec:
  podSelector:
    matchLabels:
      app: billing
      part: rpc
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: billing-keycloak-events
spec:
  podSelector:
    matchLabels:
      app: billing
      part: keycloak-events
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: billing-cronjob
spec:
  podSelector:
    matchLabels:
      app: billing
      part-type: cronjob
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: billing-django
  labels:
    app: billing
    part: django
spec:
  selector:
    app: billing
    part: django
  ports:
    - port: 8000
      targetPort: 8000
      name: gunicorn
